[gd_scene load_steps=14 format=3 uid="uid://cxj2camllhakr"]

[ext_resource type="PackedScene" path="res://src/SkyParallaxBackground/SkyParallaxBackground.tscn" id="1"]
[ext_resource type="Shader" path="res://assets/shaders/pulse.gdshader" id="2"]
[ext_resource type="PackedScene" path="res://src/HUD/HUD.tscn" id="3"]
[ext_resource type="Script" path="res://src/Levels/Level.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cgytdg8xevjop" path="res://assets/sprites/pulse.png" id="5"]
[ext_resource type="PackedScene" path="res://src/HUD/Dialog.tscn" id="6"]
[ext_resource type="Script" path="res://src/AudioBankPlayer.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://ctjfm5ueayl67" path="res://assets/sounds/sounds/ventilation_1.ogg" id="8"]
[ext_resource type="AudioStream" uid="uid://ces5d3cp6rej5" path="res://assets/sounds/sounds/bruit_vaisseau_2.ogg" id="9"]
[ext_resource type="AudioStream" uid="uid://bcud6pgqkg45b" path="res://assets/sounds/sounds/bruit_vaisseau_1.ogg" id="10"]
[ext_resource type="AudioStream" uid="uid://bolbj18baq3fc" path="res://assets/sounds/sounds/bruit_vaisseau_3.ogg" id="11"]
[ext_resource type="Texture2D" uid="uid://dfbacwjb0of7p" path="res://assets/sprites/health.png" id="12"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("2")
shader_parameter/color = Color(0.258824, 0.172549, 0.2, 0.196078)
shader_parameter/color2 = Color(0.45098, 0.317647, 0.301961, 0.588235)
shader_parameter/color3 = Color(0.196078, 0.811765, 1, 1)
shader_parameter/time = null
shader_parameter/intensity = 0.0
shader_parameter/enabled = false

[node name="Level" type="Node"]
script = ExtResource("4")

[node name="ParallaxBackground" parent="." instance=ExtResource("1")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VisualPulse" type="TextureRect" parent="UI"]
unique_name_in_owner = true
material = SubResource("1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5")

[node name="HUD" parent="UI" instance=ExtResource("3")]
layout_mode = 3
anchors_preset = 15

[node name="LevelCard" type="ColorRect" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -64.0
offset_right = 512.0
offset_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelCard"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = -4

[node name="LevelNumber" type="Label" parent="UI/LevelCard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LevelLabel"
theme_override_colors/font_color = Color(0.301961, 0.392157, 0.462745, 1)
text = "LEVEL 000 //////////"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelName" type="Label" parent="UI/LevelCard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LevelLabel"
text = "LEVEL_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dialog" parent="UI" instance=ExtResource("6")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15

[node name="HealthFilter" type="TextureRect" parent="UI"]
unique_name_in_owner = true
modulate = Color(0.27451, 0.0431373, 0.0196078, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("12")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="MusicTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true
color = Color(0.027451, 0.027451, 0.0431373, 1)

[node name="SoundFx" type="Node" parent="."]

[node name="AmbianceSound" type="AudioStreamPlayer" parent="SoundFx"]
volume_db = 2.0
script = ExtResource("7")
sounds = [ExtResource("8"), ExtResource("10"), ExtResource("9"), ExtResource("11")]
no_erase = true

[node name="AmbianceSoundsTimer" type="Timer" parent="."]

[node name="LoseHpCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[node name="CutsceneFallback" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
[connection signal="timeout" from="AmbianceSoundsTimer" to="." method="_on_AmbianceSoundsTimer_timeout"]
[connection signal="timeout" from="CutsceneFallback" to="." method="_on_CutsceneFallback_timeout"]
